--- a/discmusic/index.html
+++ b/discmusic/index.html
@@ -8,10 +8,22 @@
     <title>LN Art</title>
 </head>
 <body>
+    <h2 class="title">Made width CSS - By LN</h2>
     <div class="container">
+        <div class="bar">
+        </div>
         <div class="disc">
+            <div class="disc-line">
+                <div class="disc-line__1">
+                    <div class="disc-line__2"></div>
+                </div>
+            </div>
             <div class="disc-circle">
-                
+                <div class="disc-circle__line">
+                    <div class="line_circle">
+                        <div class="end"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="dot">
