--- a/discmusic/index.html
+++ b/discmusic/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>LN Art</title>
-</head>
-<body>
-    <h2 class="title">Made width CSS - By LN</h2>
+  </head>
+  <body>
+    <h2 class="title">
+      Made width CSS - By <a href="https://lndev.me" style="color: #fff">LN</a>
+    </h2>
     <div class="container">
-        <div class="bar">
+      <div class="bar"></div>
+      <div class="disc">
+        <div class="disc-line">
+          <div class="disc-line__1">
+            <div class="disc-line__2"></div>
+          </div>
         </div>
-        <div class="disc">
-            <div class="disc-line">
-                <div class="disc-line__1">
-                    <div class="disc-line__2"></div>
-                </div>
+        <div class="disc-circle">
+          <div class="disc-circle__line">
+            <div class="line_circle">
+              <div class="end"></div>
             </div>
-            <div class="disc-circle">
-                <div class="disc-circle__line">
-                    <div class="line_circle">
-                        <div class="end"></div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <div class="dot">
-            <span></span><span></span><span></span>
-        </div>
+      </div>
+      <div class="dot"><span></span><span></span><span></span></div>
     </div>
-</body>
+  </body>
 </html>
